packages/scrabble-solver/src/styles/global.scss
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Open+Sans:wght@400;700&family=Roboto+Mono&display=swap');

@import '~normalize.css';

@import './mixins';
@import './variables';

*,
*:after,
*:before {
  box-sizing: border-box;
}

html,
body {
  margin: 0 auto;
  padding: 0;
  background-color: var(--color--background);
  color: var(--color--foreground);
  font-family: var(--font--family);
  font-size: var(--font--size--m);
  line-height: var(--line-height);
}

html,
body,
#__next {
  height: 100%;
}

a {
  @include focus-effect;

  color: inherit;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

h1,
h2,
h3,
h4 {
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  margin: 0;
}

